# ProxyFaux

./: .dockerignore  .gitattributes  .gitignore  Justfile  README.md  deploy-remote.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  sync-pdfs.sh
backend/: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  Dockerfile.prod  entrypoint.prod.sh  pyproject.toml  pyrightconfig.json
backend/api/: models.py  pdfs.py  test_pdf_language_export.py  test_split_pdf_pairs_command.py  tests.py  urls.py  views.py
backend/api/management/commands/: export_model_pdfs.py  import_models.py  match_pdfs.py  scrape_card_images.py  split_pdf_pairs.py
backend/api/migrations/: 0001_initial.py  0002_model_pdf.py  0003_crewcard.py  0004_upgrade.py
backend/config/: urls.py  views.py
backend/config/settings/: base.py  prod.py
backend/data/: cards.json  match_pdfs_failures.json
deploy/: .env.prod.example  Caddyfile  install_tmp_cleanup.sh
devnotes/: create_pdf.md  front.md  match-pdfs.md  scrapper.md
docs/superpowers/plans/: 2026-07-24-versioned-pdf-catalog.md
docs/superpowers/specs/: 2026-07-24-versioned-pdf-catalog-design.md
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
frontend/.generated/: language-availability.json
frontend/scripts/: generate-language-availability.mjs  generate_language_availability.py  test_generate_language_availability.py
frontend/src/: constants.ts  index.css  main.tsx
(+9 files in other folders)
