[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proxyfaux-backend"
version = "0.1.0"
description = "Django backend for proxyfaux"
requires-python = ">=3.12"
dependencies = [
  "django>=5.1,<6.0",
  "djangorestframework>=3.15.0,<4.0",
  "psycopg[binary]>=3.2.0,<4.0",
  "django-cors-headers>=4.4.0,<5.0",
  "django-environ>=0.11.0,<1.0",
  "gunicorn>=23.0.0,<24.0",
  "whitenoise>=6.9.0,<7.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0,<9.0",
  "pytest-django>=4.8.0,<5.0",
  "ruff>=0.11.0,<1.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
